RNN char-based generation (autogressive/decoder)

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import requests\n",
+    "from collections import Counter\n",
+    "from torch.utils.data import Dataset, DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +44,17 @@
    "metadata": {},
    "source": [
     "# Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shakespeare_url = 'https://homl.info/shakespeare'\n",
+    "response = requests.get(shakespeare_url)\n",
+    "raw_text = response.text"
    ]
   },
   {
@@ -39,6 +82,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shakespeare_text = raw_text.lower()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,10 +98,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "char2idx = {\n",
+    "    char: idx\n",
+    "    for idx, (char, _) in enumerate(Counter(shakespeare_text).items())\n",
+    "}\n",
+    "\n",
+    "idx2char = {\n",
+    "    idx: char\n",
+    "    for char, idx in char2idx.items()\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded = [\n",
+    "    char2idx[char] for char in shakespeare_text\n",
+    "]"
    ]
   },
   {
@@ -65,7 +145,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Prepare Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_tokens = len(char2idx)\n",
+    "dataset_size = len(encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ShakespeareDataset(Dataset):\n",
+    "    def __init__(self, encoded_text, sequence_length):\n",
+    "        self.encoded_text = encoded_text\n",
+    "        self.sequence_length = sequence_length\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.encoded_text) - self.sequence_length\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        x = torch.tensor(\n",
+    "            self.encoded_text[index: (index+self.sequence_length)],\n",
+    "            dtype=torch.long,\n",
+    "        )\n",
+    "        # Target is shifted by one character\n",
+    "        y = torch.tensor(\n",
+    "            self.encoded_text[(index+1): (index+self.sequence_length+1)],\n",
+    "            dtype=torch.long,\n",
+    "        )\n",
+    "        return x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length = 32 # Number of characters\n",
+    "batch_size = 32\n",
+    "\n",
+    "train_dataset = ShakespeareDataset(encoded, length)\n",
+    "train_loader = DataLoader(\n",
+    "    train_dataset,\n",
+    "    shuffle=True,\n",
+    "    batch_size=batch_size,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Define Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ShakespeareModel(nn.Module):\n",
+    "    def __init__(self, n_tokens, embedding_dim, hidden_dim):\n",
+    "        super(ShakespeareModel, self).__init__()\n",
+    "        self.embedding = nn.Embedding(n_tokens, embedding_dim)\n",
+    "        self.rnn = nn.GRU(embedding_dim, hidden_dim, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_dim, n_tokens)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.embedding(x)\n",
+    "        x, _ = self.rnn(x)\n",
+    "        x = self.fc(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed_dim = 16\n",
+    "hidden_dim = 32\n",
+    "\n",
+    "model = ShakespeareModel(n_tokens, embed_dim, hidden_dim)\n",
+    "model.to(device)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters())"
    ]
   },
   {
@@ -76,10 +252,165 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time, math\n",
+    "\n",
+    "def time_since(since):\n",
+    "    s = time.time() - since\n",
+    "    m = math.floor(s / 60)\n",
+    "    s -= m * 60\n",
+    "    return '%dm %ds' % (m, s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text(model, input_str, num_chars=100):\n",
+    "    model.eval()\n",
+    "    generated_text = input_str.lower()\n",
+    "    input_tensor = torch.tensor([char2idx[char] for char in input_str.lower()], dtype=torch.long).unsqueeze(0)\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for _ in range(num_chars):\n",
+    "            output = model(input_tensor.to(device))\n",
+    "            probabilities = nn.functional.softmax(output[0, -1], dim=0)\n",
+    "            next_char_idx = torch.multinomial(probabilities, 1).item()\n",
+    "            generated_text += idx2char[next_char_idx]\n",
+    "            input_tensor = torch.cat([input_tensor, torch.tensor([[next_char_idx]], dtype=torch.long)], 1)\n",
+    "            \n",
+    "    return generated_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5, Loss: 1.897376342147541\n",
+      "[2m 21s (0 0%) 1.7804]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be\n",
+      "meese;\n",
+      "and requather; well her they heard af enooungnty.\n",
+      "the thmer the thou\n",
+      "spetied so, deards read\n",
+      "Epoch 2/5, Loss: 1.8148567532970459\n",
+      "[4m 48s (1 20%) 1.6553]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be doth what dear to levereve noble sake othergy mark; not read, yet many my utitee the litus:\n",
+      "in\n",
+      "if s\n",
+      "Epoch 3/5, Loss: 1.8023768587378644\n",
+      "[7m 5s (2 40%) 1.7877]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to ben to do of our turs of lencctions shall, men mean of i so not stain, that not nurdinghat, our blone.\n",
+      "Epoch 4/5, Loss: 1.795731641097383\n",
+      "[9m 15s (3 60%) 2.0107]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be is oust better,\n",
+      "awerle, wear all tirg busuress yourshon enough now muft\n",
+      "hue plait onletience, may b\n",
+      "Epoch 5/5, Loss: 1.7915963924051508\n",
+      "[11m 27s (4 80%) 1.4514]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be with the plown for fout, this to his am him,\n",
+      "i dai:\n",
+      "there spoin this majely a from there thou would\n"
+     ]
+    }
+   ],
+   "source": [
+    "PHRASE = 'To be or not to be'\n",
+    "epochs = 5\n",
+    "\n",
+    "start = time.time()\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for X_batch, y_batch in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(X_batch.to(device))\n",
+    "        loss = criterion(output.transpose(1, 2), y_batch.to(device))\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    \n",
+    "    print(f\"Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}\")\n",
+    "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
+    "    print('-'*72)\n",
+    "    gen_output = generate_text(model, PHRASE, 100)\n",
+    "    print(gen_output)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Generate Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text(model, input_str, num_chars=100):\n",
+    "    model.eval()\n",
+    "    generated_text = input_str.lower()\n",
+    "    input_tensor = (\n",
+    "        torch.tensor(\n",
+    "            [char2idx[char] for char in input_str.lower()],\n",
+    "            dtype=torch.long,\n",
+    "        )\n",
+    "        .unsqueeze(0)\n",
+    "    )\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for _ in range(num_chars):\n",
+    "            output = model(input_tensor.to(device))\n",
+    "            probabilities = nn.functional.softmax(output[0, -1], dim=0)\n",
+    "            next_char_idx = torch.multinomial(probabilities, 1).item()\n",
+    "            generated_text += idx2char[next_char_idx]\n",
+    "            input_tensor = torch.cat([input_tensor, torch.tensor([[next_char_idx]], dtype=torch.long)], 1)\n",
+    "            \n",
+    "    return generated_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to be or not to be\n",
+      "piece.\n",
+      "\n",
+      "lugidererty:\n",
+      "of maknio:\n",
+      "toun the the ah thee shonven.\n",
+      "\n",
+      "hore mente, nor, much anvend the sug\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = generate_text(model, 'To be or not to be', 100)\n",
+    "print(output)"
    ]
   },
   {
@@ -137,8 +468,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "udacity-nlp-fundamentals",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
