--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -346,7 +346,7 @@
     "        optimizer.step()\n",
     "        total_loss += loss.item()\n",
     "    \n",
-    "    print(f\"Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}\")\n",
+    "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}')\n",
     "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
     "    print('-'*72)\n",
     "    gen_output = generate_text(model, PHRASE, 100)\n",
@@ -421,6 +421,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from transformers import AutoTokenizer, AutoConfig"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -439,10 +449,144 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose a pretrained tokenizer to use\n",
+    "xlmr_model_name = 'xlm-roberta-base'\n",
+    "bert_model_name = 'bert-base-cased'\n",
+    "bert_model_name_uncased = 'bert-base-uncased'\n",
+    "\n",
+    "bert_uncased_tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    bert_model_name_uncased,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shakespeare_text = bert_uncased_tokenizer(raw_text).tokens()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token2idx = {token: idx for idx, (token, _) in enumerate(Counter(shakespeare_text).items())}\n",
+    "idx2token = {idx: token for token, idx in token2idx.items()}\n",
+    "encoded = [token2idx[token] for token in shakespeare_text]\n",
+    "n_tokens = len(token2idx)\n",
+    "dataset_size = len(encoded)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_tokens = len(token2idx)\n",
+    "dataset_size = len(encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ShakespeareDataset(Dataset):\n",
+    "    def __init__(self, encoded_text, sequence_length):\n",
+    "        self.encoded_text = encoded_text\n",
+    "        self.sequence_length = sequence_length\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.encoded_text) - self.sequence_length\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        x = torch.tensor(\n",
+    "            self.encoded_text[index: (index+self.sequence_length)],\n",
+    "            dtype=torch.long,\n",
+    "        )\n",
+    "        # Target is shifted by one character\n",
+    "        y = torch.tensor(\n",
+    "            self.encoded_text[(index+1): (index+self.sequence_length+1)],\n",
+    "            dtype=torch.long,\n",
+    "        )\n",
+    "        return x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length = 16  # Tokens \n",
+    "batch_size = 32\n",
+    "\n",
+    "train_dataset = ShakespeareDataset(encoded, length)\n",
+    "train_loader = DataLoader(\n",
+    "    train_dataset,\n",
+    "    shuffle=True,\n",
+    "    batch_size=batch_size,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Define Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ShakespeareModel(nn.Module):\n",
+    "    def __init__(self, n_tokens, embedding_dim, hidden_dim):\n",
+    "        super(ShakespeareModel, self).__init__()\n",
+    "        self.embedding = nn.Embedding(n_tokens, embedding_dim)\n",
+    "        self.rnn = nn.GRU(embedding_dim, hidden_dim, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_dim, n_tokens)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.embedding(x)\n",
+    "        x, _ = self.rnn(x)\n",
+    "        x = self.fc(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed_dim = 16\n",
+    "hidden_dim = 32\n",
+    "\n",
+    "model = ShakespeareModel(n_tokens, embed_dim, hidden_dim)\n",
+    "model.to(device)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters())"
    ]
   },
   {
@@ -453,10 +597,121 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time, math\n",
+    "\n",
+    "def time_since(since):\n",
+    "    s = time.time() - since\n",
+    "    m = math.floor(s / 60)\n",
+    "    s -= m * 60\n",
+    "    return '%dm %ds' % (m, s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text(tokenizer, model, input_str, num_tokens=100):\n",
+    "    model.eval()\n",
+    "    tokenized_text = tokenizer(input_str).tokens()[:-1]\n",
+    "    input_tensor = torch.tensor([token2idx[token] for token in tokenized_text], dtype=torch.long).unsqueeze(0)\n",
+    "    generated_text = []\n",
+    "    with torch.no_grad():\n",
+    "        for _ in range(num_tokens):\n",
+    "            output = model(input_tensor.to(device))\n",
+    "            probabilities = nn.functional.softmax(output[0, -1], dim=0)\n",
+    "            next_token_idx = torch.multinomial(probabilities, 1).item()\n",
+    "            generated_text.append(idx2token[next_token_idx])\n",
+    "            input_tensor = torch.cat([input_tensor, torch.tensor([[next_token_idx]], dtype=torch.long)], 1)\n",
+    "    # Convert to text again\n",
+    "    output_ids = tokenizer.convert_tokens_to_ids(generated_text)\n",
+    "    output_str = input_str + ' ' + tokenizer.decode(output_ids)\n",
+    "    return output_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5, Loss: 4.685794321724148\n",
+      "[2m 16s (0 0%) 4.2035]\n",
+      "------------------------------------------------------------------------\n",
+      "To be or not to be charged, how it a most england ; and yet'mon body'd from thy lands i fearful oath's obey, pity, if i sad\n",
+      "Epoch 2/5, Loss: 4.477598213031764\n",
+      "[4m 31s (1 20%) 3.8167]\n",
+      "------------------------------------------------------------------------\n",
+      "To be or not to be witness and take nothing a shame. so dost thou. queen elizabeth : warwick, for i have heard him, am glad sofall my brother '\n",
+      "Epoch 3/5, Loss: 4.368122369609175\n",
+      "[6m 46s (2 40%) 3.9326]\n",
+      "------------------------------------------------------------------------\n",
+      "To be or not to be cufied. prospero : worse and dion, much, yet this island show an angelswur shunn'd'd down, though\n",
+      "Epoch 4/5, Loss: 4.298748722312113\n",
+      "[8m 59s (3 60%) 3.6132]\n",
+      "------------------------------------------------------------------------\n",
+      "To be or not to be enterat me for making that it : the charge that more wo mortalss : why, he not let to day. where is the fair self -\n",
+      "Epoch 5/5, Loss: 4.249876293258261\n",
+      "[11m 12s (4 80%) 5.2145]\n",
+      "------------------------------------------------------------------------\n",
+      "To be or not to be got padua to pieces by some greeting of wrath, they must again speak. vincentio : why, come, i warrant thee. all pedant :\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 5\n",
+    "\n",
+    "start = time.time()\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for X_batch, y_batch in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(X_batch.to(device))\n",
+    "        loss = criterion(output.transpose(1, 2), y_batch.to(device))\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    \n",
+    "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}')\n",
+    "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
+    "    print('-'*72)\n",
+    "    output = generate_text(bert_uncased_tokenizer, model, 'To be or not to be', 30)\n",
+    "    print(output)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Generate Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To be or not to be moved. miranda : god, rather go find out, the balm whose pile is thunder by sad judgment, at once as three - die i am\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = generate_text(bert_uncased_tokenizer, model, 'To be or not to be', 30)\n",
+    "print(output)"
    ]
   },
   {
