Reduce size of dataset for faster training
- TODO: Create smaller dataset file

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -58,6 +58,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reduce the size of the dataset to make it manageable for smaller systems\n",
+    "raw_text = raw_text[:50_085]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
