Include temperature for generating text
- Spacing added & improved code readability

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,22 +278,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_text(model, input_str, num_chars=100):\n",
+    "def generate_text(\n",
+    "    model,\n",
+    "    input_str,\n",
+    "    num_chars=100,\n",
+    "    temperature=1.0,\n",
+    "):\n",
     "    model.eval()\n",
     "    generated_text = input_str.lower()\n",
-    "    input_tensor = torch.tensor([char2idx[char] for char in input_str.lower()], dtype=torch.long).unsqueeze(0)\n",
+    "    input_tensor = (\n",
+    "        torch.tensor(\n",
+    "            [char2idx[char] for char in input_str.lower()],\n",
+    "            dtype=torch.long,\n",
+    "        )\n",
+    "        .unsqueeze(0)\n",
+    "    )\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        for _ in range(num_chars):\n",
     "            output = model(input_tensor.to(device))\n",
-    "            probabilities = nn.functional.softmax(output[0, -1], dim=0)\n",
+    "            probabilities = nn.functional.softmax(\n",
+    "                output[0, -1] / temperature,\n",
+    "                dim=0,\n",
+    "            )\n",
     "            next_char_idx = torch.multinomial(probabilities, 1).item()\n",
     "            generated_text += idx2char[next_char_idx]\n",
-    "            input_tensor = torch.cat([input_tensor, torch.tensor([[next_char_idx]], dtype=torch.long)], 1)\n",
+    "            input_tensor = torch.cat(\n",
+    "                [\n",
+    "                    input_tensor,\n",
+    "                    torch.tensor([[next_char_idx]], dtype=torch.long),\n",
+    "                ],\n",
+    "                1,\n",
+    "            )\n",
     "            \n",
     "    return generated_text"
    ]
@@ -307,36 +327,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 1.897376342147541\n",
-      "[2m 21s (0 0%) 1.7804]\n",
+      "Epoch 1/5, Loss: 2.273213369244585\n",
+      "[0m 6s (0 0%) 2.0410]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be\n",
-      "meese;\n",
-      "and requather; well her they heard af enooungnty.\n",
-      "the thmer the thou\n",
-      "spetied so, deards read\n",
-      "Epoch 2/5, Loss: 1.8148567532970459\n",
-      "[4m 48s (1 20%) 1.6553]\n",
+      "to be or not to be. oon frilest snu:\n",
+      "it pearc a visuse's lortifius: if rith\n",
+      "turts. i hink,\n",
+      "male miree he thet your wie\n",
+      "Epoch 2/5, Loss: 1.908403696572057\n",
+      "[0m 12s (1 20%) 1.9153]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be doth what dear to levereve noble sake othergy mark; not read, yet many my utitee the litus:\n",
-      "in\n",
-      "if s\n",
-      "Epoch 3/5, Loss: 1.8023768587378644\n",
-      "[7m 5s (2 40%) 1.7877]\n",
+      "to be or not to besen tus for had mutingell you not rese'th in wirlion\n",
+      "than one, pertiu,\n",
+      "i hind noa dour but. oldion; \n",
+      "Epoch 3/5, Loss: 1.8226989426932776\n",
+      "[0m 18s (2 40%) 1.6688]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to ben to do of our turs of lencctions shall, men mean of i so not stain, that not nurdinghat, our blone.\n",
-      "Epoch 4/5, Loss: 1.795731641097383\n",
-      "[9m 15s (3 60%) 2.0107]\n",
+      "to be or not to besevence, and tate whithey?\n",
+      "\n",
+      "vore the do senant pabky in beinger my snuse we promes; and poopl: keind\n",
+      "Epoch 4/5, Loss: 1.7800110093320902\n",
+      "[0m 25s (3 60%) 1.9462]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be is oust better,\n",
-      "awerle, wear all tirg busuress yourshon enough now muft\n",
-      "hue plait onletience, may b\n",
-      "Epoch 5/5, Loss: 1.7915963924051508\n",
-      "[11m 27s (4 80%) 1.4514]\n",
+      "to be or not to be in geish they mak's\n",
+      "true. than.\n",
+      "\n",
+      "first chall ofner:\n",
+      "and for fonest:\n",
+      "the that dutus,\n",
+      "and berold the \n",
+      "Epoch 5/5, Loss: 1.7531729327223171\n",
+      "[0m 31s (4 80%) 1.6333]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be with the plown for fout, this to his am him,\n",
-      "i dai:\n",
-      "there spoin this majely a from there thou would\n"
+      "to be or not to belben's secen than thust agy therest everace: youe?\n",
+      "\n",
+      "firs as\n",
+      "a menen it of flootrowen.\n",
+      "\n",
+      "menutes; shal\n"
      ]
     }
    ],
@@ -372,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,21 +428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to be\n",
-      "piece.\n",
-      "\n",
-      "lugidererty:\n",
-      "of maknio:\n",
-      "toun the the ah thee shonven.\n",
-      "\n",
-      "hore mente, nor, much anvend the sug\n"
+      "to be or not to bey-ver viray; the citizes on us to it for by ukes the had ham padican then nobtou, and not ben that t\n"
      ]
     }
    ],
@@ -432,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,16 +497,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (13047 > 512). Running this sequence through the model will result in indexing errors\n"
+     ]
+    }
+   ],
    "source": [
     "shakespeare_text = bert_uncased_tokenizer(raw_text).tokens()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,22 +652,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_text(tokenizer, model, input_str, num_tokens=100):\n",
+    "def generate_text(\n",
+    "    tokenizer,\n",
+    "    model,\n",
+    "    input_str,\n",
+    "    num_tokens=100,\n",
+    "    temperature=1.0,\n",
+    "):\n",
     "    model.eval()\n",
-    "    tokenized_text = tokenizer(input_str).tokens()[:-1]\n",
-    "    input_tensor = torch.tensor([token2idx[token] for token in tokenized_text], dtype=torch.long).unsqueeze(0)\n",
+    "    tokenized_text = tokenizer(input_str).tokens()\n",
+    "    input_tensor = (\n",
+    "        torch.tensor(\n",
+    "            [token2idx[token] for token in tokenized_text],\n",
+    "            dtype=torch.long,\n",
+    "        )\n",
+    "        .unsqueeze(0)\n",
+    "    )\n",
     "    generated_text = []\n",
     "    with torch.no_grad():\n",
     "        for _ in range(num_tokens):\n",
     "            output = model(input_tensor.to(device))\n",
-    "            probabilities = nn.functional.softmax(output[0, -1], dim=0)\n",
+    "            probabilities = nn.functional.softmax(\n",
+    "                output[0, -1] / temperature,\n",
+    "                dim=0,\n",
+    "            )\n",
     "            next_token_idx = torch.multinomial(probabilities, 1).item()\n",
     "            generated_text.append(idx2token[next_token_idx])\n",
-    "            input_tensor = torch.cat([input_tensor, torch.tensor([[next_token_idx]], dtype=torch.long)], 1)\n",
+    "            input_tensor = torch.cat(\n",
+    "                [\n",
+    "                    input_tensor,\n",
+    "                    torch.tensor([[next_token_idx]], dtype=torch.long),\n",
+    "                ],\n",
+    "                1,\n",
+    "            )\n",
     "    # Convert to text again\n",
     "    output_ids = tokenizer.convert_tokens_to_ids(generated_text)\n",
     "    output_str = input_str + ' ' + tokenizer.decode(output_ids)\n",
@@ -647,33 +697,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 4.685794321724148\n",
-      "[2m 16s (0 0%) 4.2035]\n",
+      "Epoch 1/5, Loss: 6.167175212327172\n",
+      "[0m 2s (0 0%) 5.9299]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be charged, how it a most england ; and yet'mon body'd from thy lands i fearful oath's obey, pity, if i sad\n",
-      "Epoch 2/5, Loss: 4.477598213031764\n",
-      "[4m 31s (1 20%) 3.8167]\n",
+      "To be or not to be arms returned bae planted what : i thou trumpeter mine : ', and shall. by com think newly - rome the capitol showingg i fallria em\n",
+      "Epoch 2/5, Loss: 5.37737688480639\n",
+      "[0m 5s (1 20%) 5.2679]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be witness and take nothing a shame. so dost thou. queen elizabeth : warwick, for i have heard him, am glad sofall my brother '\n",
-      "Epoch 3/5, Loss: 4.368122369609175\n",
-      "[6m 46s (2 40%) 3.9326]\n",
+      "To be or not to be of ; the lowest : hehor drop to delay : you in com cr theyces'dus : wish. la chief to so thank elders general\n",
+      "Epoch 3/5, Loss: 4.848724785973044\n",
+      "[0m 7s (2 40%) 4.4150]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be cufied. prospero : worse and dion, much, yet this island show an angelswur shunn'd'd down, though\n",
-      "Epoch 4/5, Loss: 4.298748722312113\n",
-      "[8m 59s (3 60%) 3.6132]\n",
+      "To be or not to be my used to the tu loves thing, now his. for them off of! you have have me ; thought, but you, and, we\n",
+      "Epoch 4/5, Loss: 4.4673008731767245\n",
+      "[0m 10s (3 60%) 4.3671]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be enterat me for making that it : the charge that more wo mortalss : why, he not let to day. where is the fair self -\n",
-      "Epoch 5/5, Loss: 4.249876293258261\n",
-      "[11m 12s (4 80%) 5.2145]\n",
+      "To be or not to be - coming, bulk mu shown o, it messenger. menenius : not your imprs well, yet our indeed. co heaven.warded\n",
+      "Epoch 5/5, Loss: 4.162529150060579\n",
+      "[0m 13s (4 80%) 3.5745]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be got padua to pieces by some greeting of wrath, they must again speak. vincentio : why, come, i warrant thee. all pedant :\n"
+      "To be or not to be the widows of saw the weep my justice a kind tongues of em arms, how thens ; sir, i your affection off to indeed as the king\n"
      ]
     }
    ],
@@ -708,14 +758,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be moved. miranda : god, rather go find out, the balm whose pile is thunder by sad judgment, at once as three - die i am\n"
+      "To be or not to be me yours. i can cannot infect grace marcius. aufidius : weten to'lltrele that you have bal myge ll\n"
      ]
     }
    ],
