Use text file in repo

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -9,7 +9,6 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "import requests\n",
     "from collections import Counter\n",
     "from torch.utils.data import Dataset, DataLoader"
    ]
@@ -52,9 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shakespeare_url = 'https://homl.info/shakespeare'\n",
-    "response = requests.get(shakespeare_url)\n",
-    "raw_text = response.text"
+    "# Reduced data to make it manageable for smaller systems\n",
+    "DATA_FILE = '../data/shakespeare_small.txt'"
    ]
   },
   {
@@ -63,8 +61,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reduce the size of the dataset to make it manageable for smaller systems\n",
-    "raw_text = raw_text[:50_085]"
+    "with open(DATA_FILE, 'r') as data_file:\n",
+    "    raw_text = data_file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of characters: 50,085\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of characters: {len(raw_text):,}')"
    ]
   },
   {
@@ -93,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,51 +335,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.273213369244585\n",
-      "[0m 6s (0 0%) 2.0410]\n",
+      "Epoch 1/5, Loss: 2.268483464938764\n",
+      "[0m 6s (0 0%) 1.8684]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be. oon frilest snu:\n",
-      "it pearc a visuse's lortifius: if rith\n",
-      "turts. i hink,\n",
-      "male miree he thet your wie\n",
-      "Epoch 2/5, Loss: 1.908403696572057\n",
-      "[0m 12s (1 20%) 1.9153]\n",
+      "to be or not to beslo that tarres:\n",
+      "not! spaly and headerius:\n",
+      "hall nord to when and seneminenoutiesswingone the the to \n",
+      "Epoch 2/5, Loss: 1.9106965876996707\n",
+      "[0m 12s (1 20%) 1.9195]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to besen tus for had mutingell you not rese'th in wirlion\n",
-      "than one, pertiu,\n",
-      "i hind noa dour but. oldion; \n",
-      "Epoch 3/5, Loss: 1.8226989426932776\n",
-      "[0m 18s (2 40%) 1.6688]\n",
+      "to be or not to be's shalnteser, marf, that forther as in done ritutugup calack\n",
+      "gace ir wanger or tatgy wart of chpoce\n",
+      "Epoch 3/5, Loss: 1.8223891508845855\n",
+      "[0m 19s (2 40%) 1.6410]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to besevence, and tate whithey?\n",
+      "to be or not to bereadak him a thelded to be a do nese-tor a on the swar hack?\n",
       "\n",
-      "vore the do senant pabky in beinger my snuse we promes; and poopl: keind\n",
-      "Epoch 4/5, Loss: 1.7800110093320902\n",
-      "[0m 25s (3 60%) 1.9462]\n",
+      "marcius:\n",
+      "the daon, othed,\n",
+      "yy\n",
+      "parcius f\n",
+      "Epoch 4/5, Loss: 1.778055978811587\n",
+      "[0m 25s (3 60%) 1.6997]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be in geish they mak's\n",
-      "true. than.\n",
-      "\n",
-      "first chall ofner:\n",
-      "and for fonest:\n",
-      "the that dutus,\n",
-      "and berold the \n",
-      "Epoch 5/5, Loss: 1.7531729327223171\n",
-      "[0m 31s (4 80%) 1.6333]\n",
+      "to be or not to bead and they yous inss abund the notlicer are the gows\n",
+      "fuefn the commomverine\n",
+      "for'd, go belown; then \n",
+      "Epoch 5/5, Loss: 1.7515128799901603\n",
+      "[0m 32s (4 80%) 1.6035]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to belben's secen than thust agy therest everace: youe?\n",
-      "\n",
-      "firs as\n",
-      "a menen it of flootrowen.\n",
-      "\n",
-      "menutes; shal\n"
+      "to be or not to betg citizen:\n",
+      "whry not good the mey, rome, at thath for of sens not of to you groved\n",
+      "deat you wilosm c\n"
      ]
     }
    ],
@@ -407,7 +416,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to bey-ver viray; the citizes on us to it for by ukes the had ham padican then nobtou, and not ben that t\n"
+      "to be or not to be volp fiant,--'\n",
+      "when humsel, to bene. wor, as\n",
+      "of\n",
+      "yett begrich the ind be shall reecome ler that in y\n"
      ]
     }
    ],
@@ -676,26 +688,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.167175212327172\n",
-      "[0m 2s (0 0%) 5.9299]\n",
+      "Epoch 1/5, Loss: 6.197644301489288\n",
+      "[0m 2s (0 0%) 5.7094]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be arms returned bae planted what : i thou trumpeter mine : ', and shall. by com think newly - rome the capitol showingg i fallria em\n",
-      "Epoch 2/5, Loss: 5.37737688480639\n",
-      "[0m 5s (1 20%) 5.2679]\n",
+      "To be or not to be he, how or whatdro la w where are but have home, no should mule you city spiritum never not is tis thy bands,ini marc\n",
+      "Epoch 2/5, Loss: 5.333558495138206\n",
+      "[0m 5s (1 20%) 4.8525]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be of ; the lowest : hehor drop to delay : you in com cr theyces'dus : wish. la chief to so thank elders general\n",
-      "Epoch 3/5, Loss: 4.848724785973044\n",
-      "[0m 7s (2 40%) 4.4150]\n",
+      "To be or not to be maycu : and,rti wears give wounded they hot he, corio this to,er report? rats justice got so members him :ith statutes\n",
+      "Epoch 3/5, Loss: 4.787915608462165\n",
+      "[0m 8s (2 40%) 4.2919]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be my used to the tu loves thing, now his. for them off of! you have have me ; thought, but you, and, we\n",
-      "Epoch 4/5, Loss: 4.4673008731767245\n",
-      "[0m 10s (3 60%) 4.3671]\n",
+      "To be or not to be us to be content - - when mothers dogs subjects there arecrest me, holding - letter and the as cannot he means mine. men's woo\n",
+      "Epoch 4/5, Loss: 4.409752887838027\n",
+      "[0m 10s (3 60%) 4.6681]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be - coming, bulk mu shown o, it messenger. menenius : not your imprs well, yet our indeed. co heaven.warded\n",
-      "Epoch 5/5, Loss: 4.162529150060579\n",
-      "[0m 13s (4 80%) 3.5745]\n",
+      "To be or not to be ##chers here't you is the noblestangled marcius a ex lately looks in news. ha tos to, the gods sheidius : which\n",
+      "Epoch 5/5, Loss: 4.10928665247618\n",
+      "[0m 13s (4 80%) 4.2452]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be the widows of saw the weep my justice a kind tongues of em arms, how thens ; sir, i your affection off to indeed as the king\n"
+      "To be or not to be ##riolanus, when you with theirling dem ; i but'he didour,'fare is at hearingces to me. disease may heart\n"
      ]
     }
    ],
@@ -737,7 +749,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be me yours. i can cannot infect grace marcius. aufidius : weten to'lltrele that you have bal myge ll\n"
+      "To be or not to be cupboard sous : and you find you havee to steel company, chests the dispatch is the blood is the gentle flower. else. volumnia\n"
      ]
     }
    ],
